force-app/main/default/objects/Dan360_Partner__c/Dan360_Partner__c.object-meta.xml
<CustomObject>
    <description>Partner</description>
    <label>Partner</label>
    <nameField>
        <label>Nombre de Partner</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>