force-app/main/default/objects/Dan360_Partner__c/fields/Counter__c.field-meta.xml
<CustomField>
    <fullName>Counter__c</fullName>
    <label>Counter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>