force-app/main/default/objects/Dan360_Partner__c/fields/Dan360_Customer__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Customer__c</fullName>
    <description>Cliente relacionado la parter.</description>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partners</relationshipLabel>
    <relationshipName>Parners</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>