force-app/main/default/objects/Dan360_Partner__c/fields/Dan360_CustomerSalesArea__c.field-meta.xml
<CustomField>
    <fullName>Dan360_CustomerSalesArea__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Sales Area</label>
    <referenceTo>Dan360_CustomerSalesArea__c</referenceTo>
    <relationshipLabel>Parners</relationshipLabel>
    <relationshipName>Parners</relationshipName>
    <type>Lookup</type>
</CustomField>