force-app/main/default/objects/Dan360_Partner__c/fields/DAN360_Id_SAP_Cliente__c.field-meta.xml
<CustomField>
    <fullName>DAN360_Id_SAP_Cliente__c</fullName>
    <formula>Dan360_CustomerSalesArea__r.Dan360_Customer__r.Id_SAP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id SAP Cliente</label>
    <type>Text</type>
</CustomField>