force-app/main/default/objects/Dan360_Partner__c/fields/DAN360_Nombre_Cliente__c.field-meta.xml
<CustomField>
    <fullName>DAN360_Nombre_Cliente__c</fullName>
    <formula>Dan360_CustomerSalesArea__r.Dan360_Customer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Cliente</label>
    <type>Text</type>
</CustomField>