force-app/main/default/objects/Dan360_Partner__c/fields/Dan360_Rol__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Rol__c</fullName>
    <label>Rol</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payer</fullName>
            </value>
            <value>
                <fullName>Sold to</fullName>
            </value>
            <value>
                <fullName>Ship to</fullName>
            </value>
            <value>
                <fullName>Bill to</fullName>
            </value>
            <value>
                <fullName>AG</fullName>
            </value>
            <value>
                <fullName>RE</fullName>
            </value>
            <value>
                <fullName>RG</fullName>
            </value>
            <value>
                <fullName>SP</fullName>
            </value>
            <value>
                <fullName>WE</fullName>
            </value>
            <value>
                <fullName>ZX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>