force-app/main/default/objects/Dan360_Partner__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <formula>Dan360_CustomerSalesArea__r.Dan360_SalesArea__r.Dan360_SalesOrganization__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organization</label>
    <type>Text</type>
</CustomField>